--- a/css/style.css
+++ b/css/style.css
@@ -524,7 +524,41 @@ body {
     text-align: center;
 }
 
+.novedades__main {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    background-image: url('/multi/Semáforo-F1.jpg');
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+    min-height: 500px;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+    max-width: 1400px;
+    margin: 0 auto;
+    margin-top: 2rem;
+    text-align: center;
+    border-radius: 5px;
+}
 
+.novedades__title {
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+    color: white;
+}
+
+.novedades__btn {
+    background: var(--primary-color);
+    color: white;
+    padding: 12px 24px;
+    border-radius: 8px;
+    font-weight: bold;
+    text-transform: uppercase;
+    transition: 0.3s;
+    text-decoration: none;
+}
 
   
   
